# ad-ops

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  Makefile.toml  README.md
blog/: book.toml
blog/src/: README.md  SUMMARY.md
blog/src/experiment/: README.md
blog/src/experiment/cases/: README.md  clicky.md
blog/src/experiment/foundation/: README.md  axum.md  cargo-make.md  dioxus.md  mdbook.md  shuttle.md
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/models/: clicks.rs
crates/web/: Cargo.toml  Dioxus.toml
crates/web/assets/: style.css
crates/web/src/: lib.rs  main.rs
crates/web/src/components/: clicky.rs  home.rs  mod.rs  navbar.rs
