[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
tokio = "1.28.2"
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["fs"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json"] }
web-sys = "0.3.64"

shuttle-axum = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-static-folder = "0.21.0"
shuttle-persist = "0.21.0"