[package]
name = "server"
version.workspace = true
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }

shuttle-axum.workspace = true
shuttle-runtime.workspace = true
shuttle-static-folder.workspace = true
shuttle-persist.workspace = true

shared = { path = "../shared" }