[package]
name = "web"
version = "0.1.0"
authors = ["Adrian Opsahl"]
edition = "2021"

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.2"
reqwest.workspace = true
web-sys.workspace = true

shared = { path = "../shared" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
